--- a/eng/linkerTests/project.csproj.template
+++ b/eng/linkerTests/project.csproj.template
@@ -3,8 +3,9 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
-    <RuntimeIdentifier>win-x64</RuntimeIdentifier>
+    <RuntimeIdentifier>{RuntimeIdentifier}</RuntimeIdentifier>
     <RuntimePackDir>{RuntimePackDir}</RuntimePackDir>
+    <TargetingPackDir>{TargetingPackDir}</TargetingPackDir>
   </PropertyGroup>
 
 </Project>
